# llm-tool

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
crates/llm-tool-macros/: Cargo.toml  README.md
crates/llm-tool-macros/src/: lib.rs  response_struct_gen.rs  template_codegen.rs  template_compile.rs
crates/llm-tool-mcp/: Cargo.toml  README.md
crates/llm-tool-mcp/src/: lib.rs  protocol.rs  server.rs
src/: compat.rs  doc_response_templates.md  lib.rs  registry.rs  rust_tool.rs  types.rs
src/registry/: mod.rs  tests.rs
tests/: new_attr_names.rs  no_std.rs  response_template.rs  template_description.rs  template_macro.rs  template_perf.rs  tool_macro.rs
tests/ui/: basic_async.rs  basic_sync.rs  conflict_prompt_prompt_file.rs  context_by_value.rs  context_explicit_opt_in.rs  context_passthrough.rs  missing_doc.rs  missing_param_doc.rs  multiline_doc.rs  option_params.rs  param_multiline_doc.rs  self_param.rs  str_ref_params.rs  template_missing_context.rs  typed_return.rs  wrong_return_type.rs  zero_params.rs
tools/: dynamic_desc.tmpl.md  get_weather.tmpl.md  parameterized_desc.tmpl.md  search_response.tmpl.md  static_desc.tmpl.md  weather_response.tmpl.md
