[package]
name = "llm-tool"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Framework-agnostic Rust tool definitions for LLM agents"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/llm-tool"
readme = "README.md"
keywords = ["llm", "tool", "agent", "function-calling"]
categories = ["api-bindings"]

[workspace]
members = ["crates/llm-tool-macros", "crates/llm-tool-mcp"]
resolver = "3"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"

[features]
default = []
# Enable `#[llm_tool(description = "path.tmpl.md")]` for template-based
# tool descriptions. Requires `prompt-templates` as a direct dependency
# for runtime context types (`Context`, `Template`).
prompt-templates = ["dep:prompt-templates", "llm-tool-macros/prompt-templates"]

[dependencies]
llm-tool-macros = { path = "crates/llm-tool-macros", version = "0.1.4" }
prompt-templates = { version = "0.1.4", optional = true }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "fs"] }
tempfile = "3"
futures = "0.3"
trybuild = "1"

[lints]
workspace = true
