[package]
name = "llm-tool-macros"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for llm-tool (#[llm_tool] attribute)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/domenukk/llm-tool"
readme = "README.md"
keywords = ["llm", "tool", "proc-macro", "function-calling", "agent"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = []
# Enables compile-time template parsing for `prompt_file = "..."` attributes.
prompt-templates = ["dep:prompt-templates", "dep:hashbrown"]

[dependencies]
prompt-templates = { version = "0.2.1", optional = true }
hashbrown = { version = "0.17", optional = true }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.11"

[lints]
workspace = true
